--- a/client/app/Admin/addAdversary.html
+++ b/client/app/Admin/addAdversary.html
@@ -1,4 +1,4 @@
-<div class="modal fade" ng-controller="AddadvController as $ctrl">
+<div class="modal fade" ng-controller="AddAdvController as $ctrl">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
