major linting fixes

--- a/client/app/ProductDetails/deleteProductModal.html
+++ b/client/app/ProductDetails/deleteProductModal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" ng-controller="DeleteproductController as $ctrl">
+<div class="modal fade" ng-controller="DeleteProductController as $ctrl">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
