--- a/client/app/Feeds/addFeedModal.html
+++ b/client/app/Feeds/addFeedModal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" ng-controller="AddfeedController as $ctrl">
+<div class="modal fade" ng-controller="AddFeedController as $ctrl">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
