--- a/client/app/Feeds/deleteFeed.html
+++ b/client/app/Feeds/deleteFeed.html
@@ -1,4 +1,4 @@
-<div class="modal fade" ng-controller="DeletefeedController as $ctrl">
+<div class="modal fade" ng-controller="DeleteFeedController as $ctrl">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
