--- a/client/app/ProductDetails/addThreatModal.html
+++ b/client/app/ProductDetails/addThreatModal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" ng-controller="AddthreatController as $ctrl">
+<div class="modal fade" ng-controller="AddThreatController as $ctrl">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
