--- a/client/app/ThreatDetail/deleteThreat.html
+++ b/client/app/ThreatDetail/deleteThreat.html
@@ -1,4 +1,4 @@
-<div class="modal fade" ng-controller="DeletethreatController as $ctrl">
+<div class="modal fade" ng-controller="DeleteThreatController as $ctrl">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
