--- a/client/app/ProductDetails/productDetail.html
+++ b/client/app/ProductDetails/productDetail.html
@@ -25,9 +25,11 @@
           {{keyword}}<span ng-show="$index != vm.keywords.length-1">, </span>
         </span>
         <form ng-show="vm.user" data-editable-form name="ngTagsForm" class="productKeywords">
-          <div ng-show="!ngTagsForm.$visible" e-min-length="3" e-replace-spaces-with-dashes="false"  e-style="font-style:normal !important; text-decoration:none;marign-top:10px; margin-left:40px; width:700px; height:100px;" editable-tags-input="vm.keywords" data-e-form="ngTagsForm" data-e-ng-model="vm.keywords">
+          <div ng-show="!ngTagsForm.$visible" e-min-length="3" e-replace-spaces-with-dashes="false" e-style="font-style:normal !important; text-decoration:none;marign-top:10px; margin-left:40px; width:700px; height:100px;" editable-tags-input="vm.keywords" data-e-form="ngTagsForm"
+          data-e-ng-model="vm.keywords">
             <ul class="keywords" ng-click="ngTagsForm.$show()" style="font-style:normal !important;">
-              &nbsp;<p class="keywords"  ng-repeat="word in vm.keywords" >{{word.text || word}}{{$last ? '' : ', &nbsp'}}</p>
+              &nbsp;
+              <p class="keywords" ng-repeat="word in vm.keywords">{{word.text || word}}{{$last ? '' : ', &nbsp'}}</p>
             </ul>
             <editable-tags-input-auto-complete source="loadTags($query)"></editable-tags-input-auto-complete>
           </div>
@@ -46,13 +48,13 @@
         </form>
       </div>
 
-        <strong style="color:black">Category: </strong>
-        <span ng-show="vm.user">
+      <strong style="color:black">Category: </strong>
+      <span ng-show="vm.user">
           <p class="productCategory">
             <a href="#" class="productCategory" editable-select="vm.category" e-style="" e-ng-options="opt.Name for opt in vm.productCategories track by opt.ID" onaftersave="vm.updateCategory()" buttons="no">{{vm.category.Name ||vm.category || "None"}}</a>
           </p>
         </span>
-        <span ng-show="!vm.user">
+      <span ng-show="!vm.user">
           {{vm.category.Name ||vm.category || "None"}}
         </span>
       <p>
@@ -60,8 +62,8 @@
           <strong style="color:black">With Selection: </strong>
           <span ng-show="vm.getSelectedThreatsLength()">
             <a href="#" ng-click="vm.editSelectionModal()">Edit Severity/Status of {{vm.getSelectedThreatsLength()}} Selected Threat<span ng-show="vm.getSelectedThreatsLength() > 1">s</span></a>
-          </span>
-          <span ng-hide="vm.getSelectedThreatsLength()">
+        </span>
+        <span ng-hide="vm.getSelectedThreatsLength()">
             No Threats Selected
           </span>
         </span>
@@ -91,99 +93,101 @@
     </button>
   </div>
 
-	<!-- For Admin View-->
-	<div class="filters" -ng-hide="!vm.canDelete">
-		<div class="float-right">
-			<p class="lastEdited"><strong style="color:black">Last Edited By: </strong>{{vm.editor}}</p>
-		</div>
-		<br/>
-		<br/>
+  <!-- For Admin View-->
+  <div class="filters" -ng-hide="!vm.canDelete">
+    <div class="float-right">
+      <p class="lastEdited"><strong style="color:black">Last Edited By: </strong>{{vm.editor}}</p>
+    </div>
+    <br/>
+    <br/>
 
-		<p class="float-right">
-			<strong>Severity:</strong>&nbsp;
-			<select name="adversary" ng-options="opt for opt in vm.severities track by opt" ng-model="selectedSeverity">
-			</select>&nbsp;
-		</p>
-		<p class="float-right">
-			<strong>Status:</strong>&nbsp;
-			<select name="adversary" ng-options="opt for opt in vm.filterstatuses track by opt" ng-model="selectedStatus">
-			</select>&nbsp;
-		</p>
-	</div>
+    <p class="float-right">
+      <strong>Severity:</strong>&nbsp;
+      <select name="adversary" ng-options="opt for opt in vm.severities track by opt" ng-model="selectedSeverity">
+      </select>&nbsp;
+    </p>
+    <p class="float-right">
+      <strong>Status:</strong>&nbsp;
+      <select name="adversary" ng-options="opt for opt in vm.filterstatuses track by opt" ng-model="selectedStatus">
+      </select>&nbsp;
+    </p>
+  </div>
 
-	<!-- For Base View-->
-	<div class="filters" ng-show="vm.user && !vm.canDelete">
-		<div class="float-right">
-			<p class="lastEdited"><strong style="color:black">Last Edited By: </strong>{{vm.editor || "None"}}</p>
-		</div>
-		<br/>
-		<br/>
-		<p class="float-right">
-			<strong>Severity:</strong>&nbsp;
-			<select name="adversary" ng-options="opt for opt in vm.severities track by opt" ng-model="severity">
-			</select>
-			&nbsp;
-		</p>
-		<p class="float-right">
-			<strong>Status:</strong>&nbsp;
-			<select name="adversary" ng-options="opt for opt in vm.statuses track by opt" ng-model="status">
-			</select>&nbsp;
-		</p>
-	</div>
+  <!-- For Base View-->
+  <div class="filters" ng-show="vm.user && !vm.canDelete">
+    <div class="float-right">
+      <p class="lastEdited"><strong style="color:black">Last Edited By: </strong>{{vm.editor || "None"}}</p>
+    </div>
+    <br/>
+    <br/>
+    <p class="float-right">
+      <strong>Severity:</strong>&nbsp;
+      <select name="adversary" ng-options="opt for opt in vm.severities track by opt" ng-model="severity">
+      </select>
+      &nbsp;
+    </p>
+    <p class="float-right">
+      <strong>Status:</strong>&nbsp;
+      <select name="adversary" ng-options="opt for opt in vm.statuses track by opt" ng-model="status">
+      </select>&nbsp;
+    </p>
+  </div>
 </div>
 
-  <table st-table="vm.displayedCollection" st-safe-src="vm.rowCollection" class="table table-striped main">
-    <thead>
-      <tr>
-        <th colspan="16"><input st-search="" class="form-control" placeholder="search ..." type="text"/></th>
-      </tr>
-      <tr>
-        <th></th>
-        <th st-sort="date" st-sort-default="reverse">Date <i class="icon fa-fw"></i></th>
-        <th st-sort="Title">Title <i class="icon fa-fw"></i></th>
-        <th>Description</th>
-        <th>Severity</th>
-        <th>Status</th>
-        <th></th>
-      </tr>
-    </thead>
+<table st-table="vm.displayedCollection" st-safe-src="vm.rowCollection" class="table table-striped main">
+  <thead>
+    <tr>
+      <th colspan="16">
+        <input st-search="" class="form-control" placeholder="search ..." type="text" />
+      </th>
+    </tr>
+    <tr>
+      <th></th>
+      <th st-sort="date" st-sort-default="reverse">Date <i class="icon fa-fw"></i></th>
+      <th st-sort="Title">Title <i class="icon fa-fw"></i></th>
+      <th>Description</th>
+      <th>Severity</th>
+      <th>Status</th>
+      <th></th>
+    </tr>
+  </thead>
 
-    <tbody>
-      <tr ng-show="vm.canDelete" st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.displayedCollection | filter: c.Name | filter: selectedSeverity | filter: selectedStatus">
-        <td></td>
-        <td>{{vm.formatDateString(row.date)}}</td>
-        <td class="restrict-width"><a href="/threats/{{row.ID}}">{{row.Title}}</a></td>
-        <td class="restrict-width">{{row.Description || "No Description"}}</td>
-        <td ng-hide="!vm.canDelete">
-          <a href="#" class="threatOptionSelect" editable-select="vm.newSeverity" e-ng-options="opt for opt in vm.severities" onaftersave="vm.updateThreatSeverity(row.ID)" buttons="no">{{row.Severity || "None"}}
+  <tbody>
+    <tr ng-show="vm.canDelete" st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.displayedCollection | filter: c.Name | filter: selectedSeverity | filter: selectedStatus">
+      <td></td>
+      <td>{{vm.formatDateString(row.date)}}</td>
+      <td class="restrict-width"><a href="/threats/{{row.ID}}">{{row.Title}}</a></td>
+      <td class="restrict-width">{{row.Description || "No Description"}}</td>
+      <td ng-hide="!vm.canDelete">
+        <a href="#" class="threatOptionSelect" editable-select="vm.newSeverity" e-ng-options="opt for opt in vm.severities" onaftersave="vm.updateThreatSeverity(row.ID)" buttons="no">{{row.Severity || "None"}}
           </a>
-        </td>
-        <td ng-hide="vm.canDelete">{{row.Severity}}</td>
-        <td ng-hide="!vm.canDelete">
-          <a href="#" class="threatOptionSelect" editable-select="vm.newStatus" e-ng-options="opt for opt in vm.statuses" onaftersave="vm.updateThreatStatus(row.ID)" buttons="no">{{row.Status || "None"}}
+      </td>
+      <td ng-hide="vm.canDelete">{{row.Severity}}</td>
+      <td ng-hide="!vm.canDelete">
+        <a href="#" class="threatOptionSelect" editable-select="vm.newStatus" e-ng-options="opt for opt in vm.statuses" onaftersave="vm.updateThreatStatus(row.ID)" buttons="no">{{row.Status || "None"}}
           </a>
-        </td>
-        <td ng-hide="vm.canDelete">{{row.Status}}</td>
-        <td>
-          <button  ng-hide="!vm.canDelete" ng-click="vm.deleteThreatModal(row.ID)" class="deleteThreatButton">
-            <i class="icon glyphicon glyphicon-trash fa-fw"></i>
-          </button>
-        </td>
-      </tr>
+      </td>
+      <td ng-hide="vm.canDelete">{{row.Status}}</td>
+      <td>
+        <button ng-hide="!vm.canDelete" ng-click="vm.deleteThreatModal(row.ID)" class="deleteThreatButton">
+          <i class="icon glyphicon glyphicon-trash fa-fw"></i>
+        </button>
+      </td>
+    </tr>
 
-      <tr ng-hide="vm.canDelete" st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.displayedCollection |filter: '!'+ '-New N/A-'| filter: '!'+ '-N/A-'| filter: c.Name | filter: selectedSeverity | filter: selectedStatus">
-        <td></td>
-        <td>{{vm.formatDateString(row.date)}}</td>
-        <td class="restrict-width"><a href="/threats/{{row.ID}}">{{row.Title}}</a></td>
-        <td class="restrict-width">{{row.Description || "No Description"}}</td>
-        <td ng-hide="vm.canDelete">{{row.Severity}}</td>
-        <td ng-hide="vm.canDelete">{{row.Status}}</td>
-        <td>
-          <button  ng-hide="!vm.canDelete" ng-click="vm.deleteThreatModal(row.ID)" class="deleteThreatButton">
-            <i class="icon glyphicon glyphicon-trash fa-fw"></i>
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+    <tr ng-hide="vm.canDelete" st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.displayedCollection |filter: '!'+ '-New N/A-'| filter: '!'+ '-N/A-'| filter: c.Name | filter: selectedSeverity | filter: selectedStatus">
+      <td></td>
+      <td>{{vm.formatDateString(row.date)}}</td>
+      <td class="restrict-width"><a href="/threats/{{row.ID}}">{{row.Title}}</a></td>
+      <td class="restrict-width">{{row.Description || "No Description"}}</td>
+      <td ng-hide="vm.canDelete">{{row.Severity}}</td>
+      <td ng-hide="vm.canDelete">{{row.Status}}</td>
+      <td>
+        <button ng-hide="!vm.canDelete" ng-click="vm.deleteThreatModal(row.ID)" class="deleteThreatButton">
+          <i class="icon glyphicon glyphicon-trash fa-fw"></i>
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
 </div>
