--- a/client/app/Watchlist/watchlist.html
+++ b/client/app/Watchlist/watchlist.html
@@ -3,82 +3,88 @@
 <h5 class="WatchlistTableTitle"><strong>Followed Ontologies</strong></h5>
 <br>
 <table st-table="vm.displayedCollection" st-safe-src="vm.ProductRowCollection" class="table table-striped productTable">
-      <thead>
-        <tr>
-          <th colspan="5"><input st-search="" st-select-mode="multiple" class="form-control" placeholder="search ..." type="text"/></th>
-          <div>
+  <thead>
+    <tr>
+      <th colspan="5">
+        <input st-search="" st-select-mode="multiple" class="form-control" placeholder="search ..." type="text" />
+      </th>
+      <div>
 
 
-          </div>
-        </tr>
-			<tr>
-				<th st-sort="Name">Ontology <i class="icon fa-fw"></i></th>
-				<th>Description</th>
-        <th st-sort="Category">Category <i class="icon fa-fw"></i></th>
-        <th></th>
-			</tr>
-			</thead>
-			<tbody>
-			<tr ng-repeat="row in vm.displayedCollection">
-				<td><a href="/ontologies/{{row.ID}}">{{row.Name}}</a></td>
-				<td>{{row.Description || "No Description"}}</td>
-        <td>{{row.Category}}</td>
-        <td>
-          <button  ng-click="vm.unfollowProductModal(row.ID)" class="deleteThreatButton">
-             <i class="icon glyphicon glyphicon-eye-close fa-fw"></i>
-          </button></td>
-			</tr>
-			</tbody>
-      <tfoot>
-        <tr>
-  				<td colspan="9" class="text-center">
-  				      <div class="pages" st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="7"></div>
-  				</td>
-  			</tr>
-		</tfoot>
+      </div>
+    </tr>
+    <tr>
+      <th st-sort="Name">Ontology <i class="icon fa-fw"></i></th>
+      <th>Description</th>
+      <th st-sort="Category">Category <i class="icon fa-fw"></i></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr ng-repeat="row in vm.displayedCollection">
+      <td><a href="/ontologies/{{row.ID}}">{{row.Name}}</a></td>
+      <td>{{row.Description || "No Description"}}</td>
+      <td>{{row.Category}}</td>
+      <td>
+        <button ng-click="vm.unfollowProductModal(row.ID)" class="deleteThreatButton">
+          <i class="icon glyphicon glyphicon-eye-close fa-fw"></i>
+        </button>
+      </td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <td colspan="9" class="text-center">
+        <div class="pages" st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="7"></div>
+      </td>
+    </tr>
+  </tfoot>
 </table>
 
 
 <h5 class="WatchlistTableTitle"><strong>Followed Threats</strong></h5>
 <table st-table="vm.displayedThreatCollection" st-safe-src="vm.ThreatRowCollection" class="table table-striped main">
 
-      <thead>
-        <tr>
-          <th colspan="9"><input st-search="" class="form-control" placeholder="search ..." type="text"/></th>
-        </tr>
-			<tr>
-        <th st-sort=""> </th>
-				<th st-sort="Title">Title <i class="icon fa-fw"></i></th>
-				<th>Description</th>
-        <th st-sort="Severity">Severity <i class="icon fa-fw"></i></th>
-        <th st-sort="Status">Status <i class="icon fa-fw"></i></th>
+  <thead>
+    <tr>
+      <th colspan="9">
+        <input st-search="" class="form-control" placeholder="search ..." type="text" />
+      </th>
+    </tr>
+    <tr>
+      <th st-sort=""> </th>
+      <th st-sort="Title">Title <i class="icon fa-fw"></i></th>
+      <th>Description</th>
+      <th st-sort="Severity">Severity <i class="icon fa-fw"></i></th>
+      <th st-sort="Status">Status <i class="icon fa-fw"></i></th>
 
-        <th st-sort=""> </th>
+      <th st-sort=""> </th>
 
-			</tr>
-			</thead>
+    </tr>
+  </thead>
 
-			<tbody>
-			<tr ng-repeat="row in vm.displayedThreatCollection | filter: c.Name | filter: severity | filter: status">
-        <td cs-select="row"></td>
-				<td><a href="/threats/{{row.ID}}">{{row.Title}}</a></td>
-				<td>{{row.Description || "No Description"}}</td>
-        <td>{{row.Severity}}</td>
-        <td>{{row.Status}}</td>
-			<td>
-				<button  ng-click="vm.unfollowThreatModal(row.ID)" class="deleteThreatButton">
-					 <i class="icon glyphicon glyphicon-eye-close fa-fw"></i>
-				</button></td>
+  <tbody>
+    <tr ng-repeat="row in vm.displayedThreatCollection | filter: c.Name | filter: severity | filter: status">
+      <td cs-select="row"></td>
+      <td><a href="/threats/{{row.ID}}">{{row.Title}}</a></td>
+      <td>{{row.Description || "No Description"}}</td>
+      <td>{{row.Severity}}</td>
+      <td>{{row.Status}}</td>
+      <td>
+        <button ng-click="vm.unfollowThreatModal(row.ID)" class="deleteThreatButton">
+          <i class="icon glyphicon glyphicon-eye-close fa-fw"></i>
+        </button>
+      </td>
 
-			</tr>
-			</tbody>
+    </tr>
+  </tbody>
 
-      <tfoot>
-			<tr>
-				<td colspan="9" class="text-center">
-					<div class="pages" st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="7"></div>
-				</td>
-			</tr>
-		</tfoot>
-		</table>
+  <tfoot>
+    <tr>
+      <td colspan="9" class="text-center">
+        <div class="pages" st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="7"></div>
+      </td>
+    </tr>
+  </tfoot>
+</table>
 </div>
