moved bower components to client folder

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -42,43 +42,43 @@
   <!-- Anything in the bower/inject block is automatically added. Put something in this block and it will probably be overwritten.
 Add your user scripts anywhere else... just not in here. -->
   <!-- bower:js -->
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-animate/angular-animate.js"></script>
-  <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-  <script src="bower_components/angular-resource/angular-resource.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-  <script src="bower_components/angular-touch/angular-touch.js"></script>
-  <script src="bower_components/intc-enter/src/intcEnter.directive.js"></script>
-  <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
-  <script src="bower_components/lodash/lodash.js"></script>
-  <script src="bower_components/tmix-caching/tmixCaching.js"></script>
-  <script src="bower_components/ng-tags-input/ng-tags-input.js"></script>
-  <script src="bower_components/angular-modal-service/dst/angular-modal-service.js"></script>
-  <script src="bower_components/ngMeta/dist/ngMeta.js"></script>
-  <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
-  <script src="bower_components/angular-smart-table/dist/smart-table.js"></script>
-  <script src="bower_components/angular-base64/angular-base64.js"></script>
-  <script src="bower_components/nya-bootstrap-select/dist/js/nya-bs-select.js"></script>
-  <script src="bower_components/ng-csv/build/ng-csv.min.js"></script>
-  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-  <script src="bower_components/chart.js/dist/Chart.js"></script>
-  <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
-  <script src="bower_components/moment/moment.js"></script>
-  <script src="bower_components/bootstrap-select/dist/js/bootstrap-select.js"></script>
-  <script src="bower_components/angular-moment/angular-moment.js"></script>
-  <script src="bower_components/intcAppFrame/js/intcAppFrame.js"></script>
-  <script src="bower_components/intcAppFrame/js/dataDrivenLinks.directive.js"></script>
-  <script src="bower_components/intcAppFrame/js/intcAppFrame.templates.js"></script>
+  <script src="../bower_components/jquery/dist/jquery.js"></script>
+  <script src="../bower_components/angular/angular.js"></script>
+  <script src="../bower_components/angular-animate/angular-animate.js"></script>
+  <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
+  <script src="../bower_components/angular-resource/angular-resource.js"></script>
+  <script src="../bower_components/angular-route/angular-route.js"></script>
+  <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="../bower_components/angular-touch/angular-touch.js"></script>
+  <script src="../bower_components/intc-enter/src/intcEnter.directive.js"></script>
+  <script src="../bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
+  <script src="../bower_components/lodash/lodash.js"></script>
+  <script src="../bower_components/tmix-caching/tmixCaching.js"></script>
+  <script src="../bower_components/ng-tags-input/ng-tags-input.js"></script>
+  <script src="../bower_components/angular-modal-service/dst/angular-modal-service.js"></script>
+  <script src="../bower_components/ngMeta/dist/ngMeta.js"></script>
+  <script src="../bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+  <script src="../bower_components/angular-smart-table/dist/smart-table.js"></script>
+  <script src="../bower_components/angular-base64/angular-base64.js"></script>
+  <script src="../bower_components/nya-bootstrap-select/dist/js/nya-bs-select.js"></script>
+  <script src="../bower_components/ng-csv/build/ng-csv.min.js"></script>
+  <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="../bower_components/chart.js/dist/Chart.js"></script>
+  <script src="../bower_components/angular-chart.js/dist/angular-chart.js"></script>
+  <script src="../bower_components/moment/moment.js"></script>
+  <script src="../bower_components/bootstrap-select/dist/js/bootstrap-select.js"></script>
+  <script src="../bower_components/angular-moment/angular-moment.js"></script>
+  <script src="../bower_components/intcAppFrame/js/intcAppFrame.js"></script>
+  <script src="../bower_components/intcAppFrame/js/dataDrivenLinks.directive.js"></script>
+  <script src="../bower_components/intcAppFrame/js/intcAppFrame.templates.js"></script>
   <!-- endinject -->
 
   <!-- You could add any bower dependencies manually here... -->
-  <script src="bower_components/ng-tags-input/ng-tags-input.js"></script>
-  <script src="bower_components/angular-smart-table/dist/smart-table.js"></script>
-  <script src="bower_components/angular-modal-service/dst/angular-modal-service.min.js"></script>
-  <script src="bower_components/angular-base64/angular-base64.js"></script>
-  <script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
+  <script src="../bower_components/ng-tags-input/ng-tags-input.js"></script>
+  <script src="../bower_components/angular-smart-table/dist/smart-table.js"></script>
+  <script src="../bower_components/angular-modal-service/dst/angular-modal-service.min.js"></script>
+  <script src="../bower_components/angular-base64/angular-base64.js"></script>
+  <script src="../bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
   <script src="../bower_components/nya-bootstrap-select/dist/js/nya-bs-select.min.js"></script>
 
 
@@ -136,7 +136,7 @@ Add your user scripts anywhere else... just not in here. -->
 
   <!-- You could add any other app dependencies manually here... -->
   <!-- Load environment variables -->
-  <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.min.css" />
+  <link rel="stylesheet" href="../bower_components/angular-xeditable/dist/css/xeditable.min.css" />
   <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
